<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_season_one"
        android:title="@string/menu_item_one"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_season_two"
        android:title="@string/menu_item_two"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_season_three"
        android:title="@string/menu_item_three"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_season_four"
        android:title="@string/menu_item_four"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_season_five"
        android:title="@string/menu_item_five"
        app:showAsAction="ifRoom"/>
</menu>